# Anamnesis

./: .env  .gitignore  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements.txt
.anamnesis/: config.json
anamnesis/: __init__.py  cli.py  config.py  mcp_server.py
anamnesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
anamnesis/git/: hooks.py  inspector.py
anamnesis/memory/: client.py  consolidator.py  schemas.py
anamnesis/ui/: formatter.py
anamnesis/utils/: llm_helper.py
demo/: run_demo.py
demo/sample_project/: README.md
demo/sample_project/.anamnesis/: memories.json
demo/sample_project/services/: payment_service.py  user_service.py
tests/: test_cli.py  test_memory.py
