[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anamnesis"
version = "0.1.0"
description = "A CLI companion that gives your codebase a long-term memory using Cognee AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cognee",
    "typer",
    "rich",
    "GitPython",
    "pydantic",
    "python-dotenv",
    "openai",
]

[project.scripts]
anamnesis = "anamnesis.cli:app"

[tool.setuptools.packages.find]
where = ["."]
